<resources>
    <string name="app_name">MG id</string>

    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="purpose">Mobile Biometric Attendance</string>
    <string name="login_text">Login</string>
    <string name="pin_text">****</string>
    <string name="sign_in_text">Sign In</string>
    <string name="sign_out_text">Sign Out</string>
    <string name="cancel_text">Cancel</string>
    <string name="back_text">Back</string>
    <string name="loading_text">Loading…</string>
    <string name="registration_text">Capture Bio</string>
    <string name="clocking_text">Clocking</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="next_text">Next</string>
    <string name="capture">Capture</string>
    <string name="left_index">Left Index</string>
    <string name="right_index">Right Index</string>
    <string name="right_thumb">Right Thumb</string>
    <string name="left_thumb">Left Thumb</string>
    <string name="portrait">Portrait</string>
    <string name="form_picture">Form Picture</string>
    <string name="review_text">Review</string>
    <string name="change_text">Change</string>
    <string name="flash_on">Flash On</string>
    <string name="flash_off">Flash Off</string>
    <string name="clocking">Clock</string>
    <string name="scan">Scan</string>
    <string name="close">close</string>
    <string name="verified">Verified</string>
    <string name="start_text">start</string>
    <string name="reviewing_text">reviewing…</string>
    <string name="powered_by_eureka_cachet">Powered by eureka-cachet</string>
    <string name="logout">Logout</string>
    <string name="please_wait">please wait …</string>
    <string name="not_verified">Not Verified</string>
</resources>
