<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".ui.view.bio.fragments.form.FormPictureFragment">

    <!-- TODO: Update blank fragment layout -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">

        <SurfaceView
            android:background="@drawable/image_background"
            android:layout_width="240dp"
            android:layout_height="348dp"
            android:id="@+id/pictureView"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp" />

        <ImageView
            android:background="@drawable/image_background"
            android:layout_width="240dp"
            android:layout_height="348dp"
            android:id="@+id/pictureTakenView"
            android:scaleType="centerCrop"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:contentDescription="@null" />

        <TextView
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/form_picture"
            android:id="@+id/headerView"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp" />

        <Button
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:background="@drawable/button_background"
            android:layout_width="110dp"
            android:layout_height="50dp"
            android:text="@string/capture"
            android:id="@+id/captureButton"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/pictureView"
            android:layout_alignRight="@+id/pictureView"
            android:layout_alignEnd="@+id/pictureView" />

        <Button
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:background="@drawable/button_background"
            android:layout_width="110dp"
            android:layout_height="50dp"
            android:text="@string/change_text"
            android:id="@+id/changePictureButton"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/pictureView"
            android:layout_alignRight="@+id/pictureView"
            android:layout_alignEnd="@+id/pictureView" />

        <Button
            android:textColor="@color/white"
            android:background="@drawable/sec_action_button_background"
            android:textAllCaps="false"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:text="@string/back_text"
            android:id="@+id/backButton"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:textColor="@color/white"
            android:background="@drawable/sec_action_button_background"
            android:textAllCaps="false"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:text="@string/review_text"
            android:id="@+id/reviewButton"
            android:layout_alignBottom="@+id/backButton"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <Button
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:background="@drawable/button_background"
            android:layout_width="110dp"
            android:layout_height="50dp"
            android:text="@string/flash_on"
            android:id="@+id/flashOnButton"
            android:layout_alignBottom="@+id/captureButton"
            android:layout_alignLeft="@+id/pictureView"
            android:layout_alignStart="@+id/pictureView" />

        <Button
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:background="@drawable/button_background"
            android:layout_width="110dp"
            android:layout_height="50dp"
            android:text="@string/flash_off"
            android:id="@+id/flashOffButton"
            android:layout_alignBottom="@+id/captureButton"
            android:layout_alignLeft="@+id/pictureView"
            android:layout_alignStart="@+id/pictureView" />
    </RelativeLayout>
</FrameLayout>
