<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.eurekacachet.clocling.ui.view.bio.fragments.IndexRightFragment">

    <!-- TODO: Update blank fragment layout -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal|top">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back_text"
            android:id="@+id/backButton"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_text"
            android:id="@+id/nextButton"
            android:layout_alignBottom="@+id/backButton"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/right_index"
            android:id="@+id/pictureView"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="29dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fingerImageView"
            android:layout_below="@+id/pictureView"
            android:layout_alignLeft="@+id/pictureView"
            android:layout_alignStart="@+id/pictureView"
            android:layout_marginTop="69dp"
            android:contentDescription="@null" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/capture"
            android:id="@+id/button3"
            android:layout_above="@+id/nextButton"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="56dp" />
    </RelativeLayout>
</FrameLayout>
